use same header file

--- a/lib/source/layouts/core.erb
+++ b/lib/source/layouts/core.erb
@@ -54,7 +54,7 @@
       <div class="app-pane__header toc-open-disabled">
         <a href="#content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 
-        <%= partial 'layouts/header_new' %>
+        <%= partial 'layouts/header' %>
       </div>
 
       <% if content_for? :sidebar %>
