--- a/lib/source/layouts/_header.erb
+++ b/lib/source/layouts/_header.erb
@@ -1,12 +1,13 @@
 <header class="govuk-header app-header" role="banner" data-module="govuk-header">
   <div class="govuk-header__container govuk-header__container--full-width">
-    <div class="govuk-header__logo">
-      <% if config[:tech_docs][:service_link] %>
-      <a href="<%= get_path_to_resource config, config[:tech_docs][:service_link], current_page %>" class="govuk-header__link govuk-header__link--homepage">
-      <% else %>
-      <span class="govuk-header__link govuk-header__link--homepage">
-      <% end %>
-        <% if config[:tech_docs][:show_govuk_logo] %>
+    <div class="header-left-group">
+      <div class="govuk-header__logo">
+        <% if config[:tech_docs][:service_link] %>
+        <a href="<%= get_path_to_resource config, config[:tech_docs][:service_link], current_page %>" class="govuk-header__link govuk-header__link--homepage">
+        <% else %>
+        <span class="govuk-header__link govuk-header__link--homepage">
+        <% end %>
+          <% if config[:tech_docs][:show_govuk_logo] %>
         <svg
           focusable="false"
           role="img"
@@ -44,20 +45,24 @@
       <% if config[:tech_docs][:phase] %>
         <strong class="govuk-tag"><%= config[:tech_docs][:phase] %></strong>
       <% end %>
+      </div>
+
+      <% if config[:tech_docs][:header_links] %>
+      <div class="govuk-header__content">
+        <nav class="govuk-header__navigation govuk-header__navigation--end" aria-label="Menu">
+          <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" hidden>Menu</button>
+          <ul id="navigation" class="govuk-header__navigation-list">
+            <% config[:tech_docs][:header_links].each do |title, path| %>
+              <li class="govuk-header__navigation-item<% if active_page(path) %> govuk-header__navigation-item--active<% end %>">
+                <a class="govuk-header__link" href="<%= get_path_to_resource config, path, current_page %>"<% if active_page(path) %> aria-current="page"<% end %>><%= title %></a>
+              </li>
+            <% end %>
+          </ul>
+        </nav>
+      </div>
+      <% end %>
     </div>
-    <% if config[:tech_docs][:header_links] %>
-    <div class="govuk-header__content">
-      <nav class="govuk-header__navigation govuk-header__navigation--end" aria-label="Menu">
-        <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" hidden>Menu</button>
-        <ul id="navigation" class="govuk-header__navigation-list">
-          <% config[:tech_docs][:header_links].each do |title, path| %>
-            <li class="govuk-header__navigation-item<% if active_page(path) %> govuk-header__navigation-item--active<% end %>">
-              <a class="govuk-header__link" href="<%= get_path_to_resource config, path, current_page %>"<% if active_page(path) %> aria-current="page"<% end %>><%= title %></a>
-            </li>
-          <% end %>
-        </ul>
-      </nav>
-    </div>
-    <% end %>
+
+    <%= partial 'layouts/header_search' %>
   </div>
 </header>
