--- a/lib/source/layouts/_header_search.erb
+++ b/lib/source/layouts/_header_search.erb
@@ -11,8 +11,7 @@
       name="q"
       class="govuk-input header-search__input"
       aria-controls="search-results"
-      placeholder="Search">
-    <button type="submit" class="header-search__button">Search</button>
+      placeholder="Search MDTP Handbook">
   </form>
 </div>
 <% end %>
